small styling to input fields

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,10 +15,11 @@
 
         <div class="recipe-generator">
             <div class="input-group">
-                <label for="recipeInput">What would you like to cook? Be as general or as specific as you like.</label>
+                <label for="recipeInput">What would you like to cook?</label>
                 <input type="text" id="recipeInput" class="recipe-input" 
-                       placeholder=""
-                       maxlength="200">
+                       placeholder="Be as general or as specific as you like..."
+                       maxlength="200"
+                       autofocus>
             </div>
 
             <div class="input-group">
