Improve the loading animation

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -50,6 +50,11 @@
                 <div class="loading-spinner"></div>
                 <h3>AI agents are working on your recipe...</h3>
                 <p>This may take 30-60 seconds</p>
+                
+                <div id="cookingFactsContainer" class="cooking-facts-container">
+                    <div id="cookingFact" class="cooking-fact"></div>
+                </div>
+                
                 <div id="progressLog" class="progress-log"></div>
             </div>
 
