--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -45,6 +45,10 @@
             <button id="generateBtn" class="generate-btn">
                 👨‍🍳 Generate Recipe
             </button>
+            
+            <div class="view-all-link">
+                <a href="#" id="viewAllRecipesLink">📚 View All Recipes</a>
+            </div>
 
             <div id="loading" class="loading">
                 <div class="loading-spinner"></div>
