--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,7 +10,6 @@
     <div class="container">
         <header class="header">
             <h1>🧑‍🍳 AI Recipe Generator</h1>
-            <p>Create sophisticated recipes using AI</p>
         </header>
 
         <div class="recipe-generator">
@@ -47,12 +46,14 @@
             </button>
             
             <div class="view-all-link">
-                <a href="#" id="viewAllRecipesLink">📚 View All Recipes</a>
+                <a href="#" id="viewAllRecipesLink">📚 View Recipes</a>
             </div>
 
             <div id="loading" class="loading">
-                <div class="loading-spinner"></div>
-                <h3>AI agents are working on your recipe...</h3>
+                <div class="loading-header">
+                    <div class="loading-spinner"></div>
+                    <h3>AI agents are cooking up your recipe...</h3>
+                </div>
                 <p>This may take 30-60 seconds</p>
                 
                 <div id="cookingFactsContainer" class="cooking-facts-container">
