frying pan emoji

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <button id="generateBtn" class="generate-btn">
-                👨‍🍳 Generate Recipe
+                🍳 Generate Recipe
             </button>
             
             <div class="view-all-link">
